// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bar.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
module.exports = "bar";

=====================================output=====================================
module.exports = "bar";

================================================================================
`;

exports[`foo.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
var x = require('./bar.js');
console.log(x);

=====================================output=====================================
var x = require("./bar.js");
console.log(x);

================================================================================
`;
